--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
+@plugin "daisyui";
 
 :root {
-  --background: #ffffff;
+  --background: #eaeced; /* gray-100 */
   --foreground: #171717;
 }
 
@@ -12,15 +13,44 @@
   --font-mono: var(--font-geist-mono);
 }
 
+/* Dark Mode */
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #111827; /* gray-900 */
+    --foreground: #e5e7eb; /* gray-200 */
   }
 }
 
 body {
-  background: var(--background);
+  background-color: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.blood-drop {
+  clip-path: polygon(
+    50% 0%,
+    80% 20%,
+    100% 55%,
+    85% 90%,
+    50% 100%,
+    15% 90%,
+    0% 55%,
+    20% 20%
+  );
+}
+
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-slide-up {
+  animation: slide-up 0.3s ease-out;
 }
